@@ -45,6 +45,19 @@ public:
 	See IUnknown::drop() for more information. */
 	virtual IReadFile* createAndOpenFile(const c8* filename) = 0;
 
+	//! Creates an IReadFile interface for accessing memory like a file.
+	/** This allows you to use a pointer to memory where an IReadFile is requested.
+	\param memory: A pointer to the start of the file in memory
+	\param len: The length of the memory in bytes
+	\param fileName: The name given to this file
+	\param deleteMemoryWhenDropped: True if the memory should be deleted 
+	along with the IReadFile when it is dropped.
+	\return Returns a pointer to the created file interface.
+	The returned pointer should be dropped when no longer needed.
+	See IUnknown::drop() for more information. 
+	*/
+	virtual IReadFile* createMemoryReadFile(void* memory, s32 len, const c8* fileName, bool deleteMemoryWhenDropped=false) = 0;
+
 	//! Opens a file for write access.
 	/** \param filename: Name of file to open.
 	\param append: If the file already exist, all write operations are 
